# rv32-to-amd64-design

./: CMakeLists.txt  Config.cmake  README.md  setup-vcpkg.py
scripts/vcpkg/triplets/paths/: path_qt.cmake
src/: CMakeLists.txt
src/rv32ima/: CMakeLists.txt  main.cpp
